@@ -1,3 +1,10 @@
+Fri Aug  6 14:35:45 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * orbsvcs/tests/InterfaceRepo/Bug_3881_Regression/*.*:
+        
+          New test, consisiting of IDL file and perl script, to 
+          check for reintroduction of [BUGID:3881].
+
 Fri Aug  6 13:42:39 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp(valid_creation):
